<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/black"
    app:titleTextColor="@color/white"
    app:title="Tip Calculator" />
<!--    bill amount -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_amount_label"
            android:id="@+id/billAmountLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="8"
        android:id="@+id/billAmountEditText"
        android:hint="@string/bill_amount_label"
        android:textSize="20sp"
        android:layout_alignTop="@id/billAmountLabel"
        android:layout_toRightOf="@id/billAmountLabel"
        android:layout_toEndOf="@id/billAmountLabel"
        android:layout_marginLeft="20dp"
        />
<!--    percent tip-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percentLabel"
        android:text="@string/percent_tip_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/percentDownButton"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percentTextView"
        android:text="@string/percent"
        android:layout_alignTop="@id/percentLabel"
        android:layout_alignLeft="@id/billAmountEditText"
        android:layout_alignStart="@id/billAmountEditText"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/percentDownButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/billAmountEditText"
        android:layout_toStartOf="@id/percentUpButton"
        android:layout_toRightOf="@id/percentUpButton"
        android:text="@string/down"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/percentUpButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignTop="@id/percentDownButton"
        android:layout_alignEnd="@id/billAmountEditText"
        android:layout_alignRight="@id/billAmountEditText"
        android:text="@string/rise" />

<!--    tip-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipLabel"
        android:text="@string/Tip"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/percentLabel"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipTextView"
        android:text="@string/tip_acount"
        android:layout_alignTop="@+id/tipLabel"
        android:layout_alignLeft="@+id/percentTextView"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
<!--    total -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalLabel"
        android:text="@string/total"
        android:layout_below="@+id/tipLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalTextView"
        android:text="@string/total_amount"
        android:layout_alignTop="@+id/totalLabel"
        android:layout_alignLeft="@+id/tipTextView"
        android:textSize="20dp"
        android:textColor="@color/black"
        />
</RelativeLayout>